--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="container">
         <div class="row center">
           <h5 class="header col s12 light animation-element slide-left" id="quote2"><a name="work" class =" white-text light">Interactive and Responsive designs</a></h5>
-          	
+
         </div>
       </div>
     </div>
@@ -171,7 +171,7 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
+          <h5 class="white-text">Biography</h5>
           <p class="grey-text text-lighten-4">I am a Developer currently living in the PNW, specifically Portland, OR. Web development is my passion - I am always learning and staying up to date on current web trends.</p>
 
 
