--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Eddie Duro</a>
+      Made by <a class="brown-text text-lighten-3" href="#">Eddie Duro</a>
       </div>
     </div>
   </footer>
